// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Statistics renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    commits={10}
    languages={
        Array [
            Object {
              "bytes": 200000,
              "lang": "javascript",
            },
          ]
    }
    publicRepos={10}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div>
                    <styled.div>
                              <styled.div>
                                        <Unknown
                                                  height={50}
                                                  width={52}
                                        />
                              </styled.div>
                              <CountUp
                                        className={undefined}
                                        decimal="."
                                        decimals={0}
                                        duration={3}
                                        easingFn={null}
                                        end={10}
                                        formattingFn={null}
                                        onComplete={undefined}
                                        onStart={undefined}
                                        prefix=""
                                        redraw={false}
                                        separator=""
                                        start={0}
                                        style={undefined}
                                        suffix=""
                                        useEasing={true}
                              />
                    </styled.div>
                    <styled.div
                              margin={25}
                    >
                              Public Repos
                    </styled.div>
          </styled.div>
          <styled.div>
                    <styled.div>
                              <CountUp
                                        className={undefined}
                                        decimal="."
                                        decimals={0}
                                        duration={3}
                                        easingFn={null}
                                        end={10}
                                        formattingFn={null}
                                        onComplete={undefined}
                                        onStart={undefined}
                                        prefix=""
                                        redraw={false}
                                        separator=""
                                        start={0}
                                        style={undefined}
                                        suffix=""
                                        useEasing={true}
                              />
                    </styled.div>
                    <styled.div
                              margin={25}
                    >
                              Commits
                    </styled.div>
          </styled.div>
</styled.div>,
        <styled.div>
          <styled.div>
                    <styled.div>
                              <CountUp
                                        className={undefined}
                                        decimal="."
                                        decimals={0}
                                        duration={3}
                                        easingFn={null}
                                        end={200000}
                                        formattingFn={null}
                                        onComplete={undefined}
                                        onStart={undefined}
                                        prefix=""
                                        redraw={false}
                                        separator=""
                                        start={0}
                                        style={undefined}
                                        suffix=""
                                        useEasing={true}
                              />
                    </styled.div>
                    <styled.div
                              margin={10}
                    >
                              bytes written
                    </styled.div>
                    <styled.div
                              margin={10}
                    >
                              in 
                              javascript
                    </styled.div>
          </styled.div>
</styled.div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div>
              <styled.div>
                            <styled.div>
                                          <Unknown
                                                        height={50}
                                                        width={52}
                                          />
                            </styled.div>
                            <CountUp
                                          className={undefined}
                                          decimal="."
                                          decimals={0}
                                          duration={3}
                                          easingFn={null}
                                          end={10}
                                          formattingFn={null}
                                          onComplete={undefined}
                                          onStart={undefined}
                                          prefix=""
                                          redraw={false}
                                          separator=""
                                          start={0}
                                          style={undefined}
                                          suffix=""
                                          useEasing={true}
                            />
              </styled.div>
              <styled.div
                            margin={25}
              >
                            Public Repos
              </styled.div>
</styled.div>,
            <styled.div>
              <styled.div>
                            <CountUp
                                          className={undefined}
                                          decimal="."
                                          decimals={0}
                                          duration={3}
                                          easingFn={null}
                                          end={10}
                                          formattingFn={null}
                                          onComplete={undefined}
                                          onStart={undefined}
                                          prefix=""
                                          redraw={false}
                                          separator=""
                                          start={0}
                                          style={undefined}
                                          suffix=""
                                          useEasing={true}
                            />
              </styled.div>
              <styled.div
                            margin={25}
              >
                            Commits
              </styled.div>
</styled.div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.div>
                  <styled.div>
                                    <Unknown
                                                      height={50}
                                                      width={52}
                                    />
                  </styled.div>
                  <CountUp
                                    className={undefined}
                                    decimal="."
                                    decimals={0}
                                    duration={3}
                                    easingFn={null}
                                    end={10}
                                    formattingFn={null}
                                    onComplete={undefined}
                                    onStart={undefined}
                                    prefix=""
                                    redraw={false}
                                    separator=""
                                    start={0}
                                    style={undefined}
                                    suffix=""
                                    useEasing={true}
                  />
</styled.div>,
                <styled.div
                  margin={25}
>
                  Public Repos
</styled.div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <styled.div>
                      <Unknown
                                            height={50}
                                            width={52}
                      />
</styled.div>,
                    <CountUp
                      className={undefined}
                      decimal="."
                      decimals={0}
                      duration={3}
                      easingFn={null}
                      end={10}
                      formattingFn={null}
                      onComplete={undefined}
                      onStart={undefined}
                      prefix=""
                      redraw={false}
                      separator=""
                      start={0}
                      style={undefined}
                      suffix=""
                      useEasing={true}
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Unknown
                        height={50}
                        width={52}
/>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "height": 50,
                        "width": 52,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": undefined,
                      "decimal": ".",
                      "decimals": 0,
                      "duration": 3,
                      "easingFn": null,
                      "end": 10,
                      "formattingFn": null,
                      "onComplete": undefined,
                      "onStart": undefined,
                      "prefix": "",
                      "redraw": false,
                      "separator": "",
                      "start": 0,
                      "style": undefined,
                      "suffix": "",
                      "useEasing": true,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Public Repos",
                  "margin": 25,
                },
                "ref": null,
                "rendered": "Public Repos",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.div>
                  <CountUp
                                    className={undefined}
                                    decimal="."
                                    decimals={0}
                                    duration={3}
                                    easingFn={null}
                                    end={10}
                                    formattingFn={null}
                                    onComplete={undefined}
                                    onStart={undefined}
                                    prefix=""
                                    redraw={false}
                                    separator=""
                                    start={0}
                                    style={undefined}
                                    suffix=""
                                    useEasing={true}
                  />
</styled.div>,
                <styled.div
                  margin={25}
>
                  Commits
</styled.div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <CountUp
                    className={undefined}
                    decimal="."
                    decimals={0}
                    duration={3}
                    easingFn={null}
                    end={10}
                    formattingFn={null}
                    onComplete={undefined}
                    onStart={undefined}
                    prefix=""
                    redraw={false}
                    separator=""
                    start={0}
                    style={undefined}
                    suffix=""
                    useEasing={true}
/>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": undefined,
                    "decimal": ".",
                    "decimals": 0,
                    "duration": 3,
                    "easingFn": null,
                    "end": 10,
                    "formattingFn": null,
                    "onComplete": undefined,
                    "onStart": undefined,
                    "prefix": "",
                    "redraw": false,
                    "separator": "",
                    "start": 0,
                    "style": undefined,
                    "suffix": "",
                    "useEasing": true,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Commits",
                  "margin": 25,
                },
                "ref": null,
                "rendered": "Commits",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div>
              <styled.div>
                            <CountUp
                                          className={undefined}
                                          decimal="."
                                          decimals={0}
                                          duration={3}
                                          easingFn={null}
                                          end={200000}
                                          formattingFn={null}
                                          onComplete={undefined}
                                          onStart={undefined}
                                          prefix=""
                                          redraw={false}
                                          separator=""
                                          start={0}
                                          style={undefined}
                                          suffix=""
                                          useEasing={true}
                            />
              </styled.div>
              <styled.div
                            margin={10}
              >
                            bytes written
              </styled.div>
              <styled.div
                            margin={10}
              >
                            in 
                            javascript
              </styled.div>
</styled.div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "javascript",
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.div>
                  <CountUp
                                    className={undefined}
                                    decimal="."
                                    decimals={0}
                                    duration={3}
                                    easingFn={null}
                                    end={200000}
                                    formattingFn={null}
                                    onComplete={undefined}
                                    onStart={undefined}
                                    prefix=""
                                    redraw={false}
                                    separator=""
                                    start={0}
                                    style={undefined}
                                    suffix=""
                                    useEasing={true}
                  />
</styled.div>,
                <styled.div
                  margin={10}
>
                  bytes written
</styled.div>,
                <styled.div
                  margin={10}
>
                  in 
                  javascript
</styled.div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <CountUp
                    className={undefined}
                    decimal="."
                    decimals={0}
                    duration={3}
                    easingFn={null}
                    end={200000}
                    formattingFn={null}
                    onComplete={undefined}
                    onStart={undefined}
                    prefix=""
                    redraw={false}
                    separator=""
                    start={0}
                    style={undefined}
                    suffix=""
                    useEasing={true}
/>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": undefined,
                    "decimal": ".",
                    "decimals": 0,
                    "duration": 3,
                    "easingFn": null,
                    "end": 200000,
                    "formattingFn": null,
                    "onComplete": undefined,
                    "onStart": undefined,
                    "prefix": "",
                    "redraw": false,
                    "separator": "",
                    "start": 0,
                    "style": undefined,
                    "suffix": "",
                    "useEasing": true,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "bytes written",
                  "margin": 10,
                },
                "ref": null,
                "rendered": "bytes written",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "in ",
                    "javascript",
                  ],
                  "margin": 10,
                },
                "ref": null,
                "rendered": Array [
                  "in ",
                  "javascript",
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div>
                        <styled.div>
                                    <styled.div>
                                                <Unknown
                                                            height={50}
                                                            width={52}
                                                />
                                    </styled.div>
                                    <CountUp
                                                className={undefined}
                                                decimal="."
                                                decimals={0}
                                                duration={3}
                                                easingFn={null}
                                                end={10}
                                                formattingFn={null}
                                                onComplete={undefined}
                                                onStart={undefined}
                                                prefix=""
                                                redraw={false}
                                                separator=""
                                                start={0}
                                                style={undefined}
                                                suffix=""
                                                useEasing={true}
                                    />
                        </styled.div>
                        <styled.div
                                    margin={25}
                        >
                                    Public Repos
                        </styled.div>
            </styled.div>
            <styled.div>
                        <styled.div>
                                    <CountUp
                                                className={undefined}
                                                decimal="."
                                                decimals={0}
                                                duration={3}
                                                easingFn={null}
                                                end={10}
                                                formattingFn={null}
                                                onComplete={undefined}
                                                onStart={undefined}
                                                prefix=""
                                                redraw={false}
                                                separator=""
                                                start={0}
                                                style={undefined}
                                                suffix=""
                                                useEasing={true}
                                    />
                        </styled.div>
                        <styled.div
                                    margin={25}
                        >
                                    Commits
                        </styled.div>
            </styled.div>
</styled.div>,
          <styled.div>
            <styled.div>
                        <styled.div>
                                    <CountUp
                                                className={undefined}
                                                decimal="."
                                                decimals={0}
                                                duration={3}
                                                easingFn={null}
                                                end={200000}
                                                formattingFn={null}
                                                onComplete={undefined}
                                                onStart={undefined}
                                                prefix=""
                                                redraw={false}
                                                separator=""
                                                start={0}
                                                style={undefined}
                                                suffix=""
                                                useEasing={true}
                                    />
                        </styled.div>
                        <styled.div
                                    margin={10}
                        >
                                    bytes written
                        </styled.div>
                        <styled.div
                                    margin={10}
                        >
                                    in 
                                    javascript
                        </styled.div>
            </styled.div>
</styled.div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div>
                <styled.div>
                                <styled.div>
                                                <Unknown
                                                                height={50}
                                                                width={52}
                                                />
                                </styled.div>
                                <CountUp
                                                className={undefined}
                                                decimal="."
                                                decimals={0}
                                                duration={3}
                                                easingFn={null}
                                                end={10}
                                                formattingFn={null}
                                                onComplete={undefined}
                                                onStart={undefined}
                                                prefix=""
                                                redraw={false}
                                                separator=""
                                                start={0}
                                                style={undefined}
                                                suffix=""
                                                useEasing={true}
                                />
                </styled.div>
                <styled.div
                                margin={25}
                >
                                Public Repos
                </styled.div>
</styled.div>,
              <styled.div>
                <styled.div>
                                <CountUp
                                                className={undefined}
                                                decimal="."
                                                decimals={0}
                                                duration={3}
                                                easingFn={null}
                                                end={10}
                                                formattingFn={null}
                                                onComplete={undefined}
                                                onStart={undefined}
                                                prefix=""
                                                redraw={false}
                                                separator=""
                                                start={0}
                                                style={undefined}
                                                suffix=""
                                                useEasing={true}
                                />
                </styled.div>
                <styled.div
                                margin={25}
                >
                                Commits
                </styled.div>
</styled.div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.div>
                    <styled.div>
                                        <Unknown
                                                            height={50}
                                                            width={52}
                                        />
                    </styled.div>
                    <CountUp
                                        className={undefined}
                                        decimal="."
                                        decimals={0}
                                        duration={3}
                                        easingFn={null}
                                        end={10}
                                        formattingFn={null}
                                        onComplete={undefined}
                                        onStart={undefined}
                                        prefix=""
                                        redraw={false}
                                        separator=""
                                        start={0}
                                        style={undefined}
                                        suffix=""
                                        useEasing={true}
                    />
</styled.div>,
                  <styled.div
                    margin={25}
>
                    Public Repos
</styled.div>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <styled.div>
                        <Unknown
                                                height={50}
                                                width={52}
                        />
</styled.div>,
                      <CountUp
                        className={undefined}
                        decimal="."
                        decimals={0}
                        duration={3}
                        easingFn={null}
                        end={10}
                        formattingFn={null}
                        onComplete={undefined}
                        onStart={undefined}
                        prefix=""
                        redraw={false}
                        separator=""
                        start={0}
                        style={undefined}
                        suffix=""
                        useEasing={true}
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Unknown
                          height={50}
                          width={52}
/>,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "height": 50,
                          "width": 52,
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": undefined,
                        "decimal": ".",
                        "decimals": 0,
                        "duration": 3,
                        "easingFn": null,
                        "end": 10,
                        "formattingFn": null,
                        "onComplete": undefined,
                        "onStart": undefined,
                        "prefix": "",
                        "redraw": false,
                        "separator": "",
                        "start": 0,
                        "style": undefined,
                        "suffix": "",
                        "useEasing": true,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Public Repos",
                    "margin": 25,
                  },
                  "ref": null,
                  "rendered": "Public Repos",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.div>
                    <CountUp
                                        className={undefined}
                                        decimal="."
                                        decimals={0}
                                        duration={3}
                                        easingFn={null}
                                        end={10}
                                        formattingFn={null}
                                        onComplete={undefined}
                                        onStart={undefined}
                                        prefix=""
                                        redraw={false}
                                        separator=""
                                        start={0}
                                        style={undefined}
                                        suffix=""
                                        useEasing={true}
                    />
</styled.div>,
                  <styled.div
                    margin={25}
>
                    Commits
</styled.div>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <CountUp
                      className={undefined}
                      decimal="."
                      decimals={0}
                      duration={3}
                      easingFn={null}
                      end={10}
                      formattingFn={null}
                      onComplete={undefined}
                      onStart={undefined}
                      prefix=""
                      redraw={false}
                      separator=""
                      start={0}
                      style={undefined}
                      suffix=""
                      useEasing={true}
/>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": undefined,
                      "decimal": ".",
                      "decimals": 0,
                      "duration": 3,
                      "easingFn": null,
                      "end": 10,
                      "formattingFn": null,
                      "onComplete": undefined,
                      "onStart": undefined,
                      "prefix": "",
                      "redraw": false,
                      "separator": "",
                      "start": 0,
                      "style": undefined,
                      "suffix": "",
                      "useEasing": true,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Commits",
                    "margin": 25,
                  },
                  "ref": null,
                  "rendered": "Commits",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div>
                <styled.div>
                                <CountUp
                                                className={undefined}
                                                decimal="."
                                                decimals={0}
                                                duration={3}
                                                easingFn={null}
                                                end={200000}
                                                formattingFn={null}
                                                onComplete={undefined}
                                                onStart={undefined}
                                                prefix=""
                                                redraw={false}
                                                separator=""
                                                start={0}
                                                style={undefined}
                                                suffix=""
                                                useEasing={true}
                                />
                </styled.div>
                <styled.div
                                margin={10}
                >
                                bytes written
                </styled.div>
                <styled.div
                                margin={10}
                >
                                in 
                                javascript
                </styled.div>
</styled.div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "javascript",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.div>
                    <CountUp
                                        className={undefined}
                                        decimal="."
                                        decimals={0}
                                        duration={3}
                                        easingFn={null}
                                        end={200000}
                                        formattingFn={null}
                                        onComplete={undefined}
                                        onStart={undefined}
                                        prefix=""
                                        redraw={false}
                                        separator=""
                                        start={0}
                                        style={undefined}
                                        suffix=""
                                        useEasing={true}
                    />
</styled.div>,
                  <styled.div
                    margin={10}
>
                    bytes written
</styled.div>,
                  <styled.div
                    margin={10}
>
                    in 
                    javascript
</styled.div>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <CountUp
                      className={undefined}
                      decimal="."
                      decimals={0}
                      duration={3}
                      easingFn={null}
                      end={200000}
                      formattingFn={null}
                      onComplete={undefined}
                      onStart={undefined}
                      prefix=""
                      redraw={false}
                      separator=""
                      start={0}
                      style={undefined}
                      suffix=""
                      useEasing={true}
/>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": undefined,
                      "decimal": ".",
                      "decimals": 0,
                      "duration": 3,
                      "easingFn": null,
                      "end": 200000,
                      "formattingFn": null,
                      "onComplete": undefined,
                      "onStart": undefined,
                      "prefix": "",
                      "redraw": false,
                      "separator": "",
                      "start": 0,
                      "style": undefined,
                      "suffix": "",
                      "useEasing": true,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "bytes written",
                    "margin": 10,
                  },
                  "ref": null,
                  "rendered": "bytes written",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "in ",
                      "javascript",
                    ],
                    "margin": 10,
                  },
                  "ref": null,
                  "rendered": Array [
                    "in ",
                    "javascript",
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Statistics renders empty 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div>
                    <styled.div>
                              <styled.div>
                                        <Unknown
                                                  height={50}
                                                  width={52}
                                        />
                              </styled.div>
                              <CountUp
                                        className={undefined}
                                        decimal="."
                                        decimals={0}
                                        duration={3}
                                        easingFn={null}
                                        end={0}
                                        formattingFn={null}
                                        onComplete={undefined}
                                        onStart={undefined}
                                        prefix=""
                                        redraw={false}
                                        separator=""
                                        start={0}
                                        style={undefined}
                                        suffix=""
                                        useEasing={true}
                              />
                    </styled.div>
                    <styled.div
                              margin={25}
                    >
                              Public Repos
                    </styled.div>
          </styled.div>
          <styled.div>
                    <styled.div>
                              <CountUp
                                        className={undefined}
                                        decimal="."
                                        decimals={0}
                                        duration={3}
                                        easingFn={null}
                                        end={0}
                                        formattingFn={null}
                                        onComplete={undefined}
                                        onStart={undefined}
                                        prefix=""
                                        redraw={false}
                                        separator=""
                                        start={0}
                                        style={undefined}
                                        suffix=""
                                        useEasing={true}
                              />
                    </styled.div>
                    <styled.div
                              margin={25}
                    >
                              Commits
                    </styled.div>
          </styled.div>
</styled.div>,
        <styled.div>
          
</styled.div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div>
              <styled.div>
                            <styled.div>
                                          <Unknown
                                                        height={50}
                                                        width={52}
                                          />
                            </styled.div>
                            <CountUp
                                          className={undefined}
                                          decimal="."
                                          decimals={0}
                                          duration={3}
                                          easingFn={null}
                                          end={0}
                                          formattingFn={null}
                                          onComplete={undefined}
                                          onStart={undefined}
                                          prefix=""
                                          redraw={false}
                                          separator=""
                                          start={0}
                                          style={undefined}
                                          suffix=""
                                          useEasing={true}
                            />
              </styled.div>
              <styled.div
                            margin={25}
              >
                            Public Repos
              </styled.div>
</styled.div>,
            <styled.div>
              <styled.div>
                            <CountUp
                                          className={undefined}
                                          decimal="."
                                          decimals={0}
                                          duration={3}
                                          easingFn={null}
                                          end={0}
                                          formattingFn={null}
                                          onComplete={undefined}
                                          onStart={undefined}
                                          prefix=""
                                          redraw={false}
                                          separator=""
                                          start={0}
                                          style={undefined}
                                          suffix=""
                                          useEasing={true}
                            />
              </styled.div>
              <styled.div
                            margin={25}
              >
                            Commits
              </styled.div>
</styled.div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.div>
                  <styled.div>
                                    <Unknown
                                                      height={50}
                                                      width={52}
                                    />
                  </styled.div>
                  <CountUp
                                    className={undefined}
                                    decimal="."
                                    decimals={0}
                                    duration={3}
                                    easingFn={null}
                                    end={0}
                                    formattingFn={null}
                                    onComplete={undefined}
                                    onStart={undefined}
                                    prefix=""
                                    redraw={false}
                                    separator=""
                                    start={0}
                                    style={undefined}
                                    suffix=""
                                    useEasing={true}
                  />
</styled.div>,
                <styled.div
                  margin={25}
>
                  Public Repos
</styled.div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <styled.div>
                      <Unknown
                                            height={50}
                                            width={52}
                      />
</styled.div>,
                    <CountUp
                      className={undefined}
                      decimal="."
                      decimals={0}
                      duration={3}
                      easingFn={null}
                      end={0}
                      formattingFn={null}
                      onComplete={undefined}
                      onStart={undefined}
                      prefix=""
                      redraw={false}
                      separator=""
                      start={0}
                      style={undefined}
                      suffix=""
                      useEasing={true}
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Unknown
                        height={50}
                        width={52}
/>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "height": 50,
                        "width": 52,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": undefined,
                      "decimal": ".",
                      "decimals": 0,
                      "duration": 3,
                      "easingFn": null,
                      "end": 0,
                      "formattingFn": null,
                      "onComplete": undefined,
                      "onStart": undefined,
                      "prefix": "",
                      "redraw": false,
                      "separator": "",
                      "start": 0,
                      "style": undefined,
                      "suffix": "",
                      "useEasing": true,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Public Repos",
                  "margin": 25,
                },
                "ref": null,
                "rendered": "Public Repos",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.div>
                  <CountUp
                                    className={undefined}
                                    decimal="."
                                    decimals={0}
                                    duration={3}
                                    easingFn={null}
                                    end={0}
                                    formattingFn={null}
                                    onComplete={undefined}
                                    onStart={undefined}
                                    prefix=""
                                    redraw={false}
                                    separator=""
                                    start={0}
                                    style={undefined}
                                    suffix=""
                                    useEasing={true}
                  />
</styled.div>,
                <styled.div
                  margin={25}
>
                  Commits
</styled.div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <CountUp
                    className={undefined}
                    decimal="."
                    decimals={0}
                    duration={3}
                    easingFn={null}
                    end={0}
                    formattingFn={null}
                    onComplete={undefined}
                    onStart={undefined}
                    prefix=""
                    redraw={false}
                    separator=""
                    start={0}
                    style={undefined}
                    suffix=""
                    useEasing={true}
/>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": undefined,
                    "decimal": ".",
                    "decimals": 0,
                    "duration": 3,
                    "easingFn": null,
                    "end": 0,
                    "formattingFn": null,
                    "onComplete": undefined,
                    "onStart": undefined,
                    "prefix": "",
                    "redraw": false,
                    "separator": "",
                    "start": 0,
                    "style": undefined,
                    "suffix": "",
                    "useEasing": true,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Commits",
                  "margin": 25,
                },
                "ref": null,
                "rendered": "Commits",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [],
        },
        "ref": null,
        "rendered": Array [],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div>
                        <styled.div>
                                    <styled.div>
                                                <Unknown
                                                            height={50}
                                                            width={52}
                                                />
                                    </styled.div>
                                    <CountUp
                                                className={undefined}
                                                decimal="."
                                                decimals={0}
                                                duration={3}
                                                easingFn={null}
                                                end={0}
                                                formattingFn={null}
                                                onComplete={undefined}
                                                onStart={undefined}
                                                prefix=""
                                                redraw={false}
                                                separator=""
                                                start={0}
                                                style={undefined}
                                                suffix=""
                                                useEasing={true}
                                    />
                        </styled.div>
                        <styled.div
                                    margin={25}
                        >
                                    Public Repos
                        </styled.div>
            </styled.div>
            <styled.div>
                        <styled.div>
                                    <CountUp
                                                className={undefined}
                                                decimal="."
                                                decimals={0}
                                                duration={3}
                                                easingFn={null}
                                                end={0}
                                                formattingFn={null}
                                                onComplete={undefined}
                                                onStart={undefined}
                                                prefix=""
                                                redraw={false}
                                                separator=""
                                                start={0}
                                                style={undefined}
                                                suffix=""
                                                useEasing={true}
                                    />
                        </styled.div>
                        <styled.div
                                    margin={25}
                        >
                                    Commits
                        </styled.div>
            </styled.div>
</styled.div>,
          <styled.div>
            
</styled.div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div>
                <styled.div>
                                <styled.div>
                                                <Unknown
                                                                height={50}
                                                                width={52}
                                                />
                                </styled.div>
                                <CountUp
                                                className={undefined}
                                                decimal="."
                                                decimals={0}
                                                duration={3}
                                                easingFn={null}
                                                end={0}
                                                formattingFn={null}
                                                onComplete={undefined}
                                                onStart={undefined}
                                                prefix=""
                                                redraw={false}
                                                separator=""
                                                start={0}
                                                style={undefined}
                                                suffix=""
                                                useEasing={true}
                                />
                </styled.div>
                <styled.div
                                margin={25}
                >
                                Public Repos
                </styled.div>
</styled.div>,
              <styled.div>
                <styled.div>
                                <CountUp
                                                className={undefined}
                                                decimal="."
                                                decimals={0}
                                                duration={3}
                                                easingFn={null}
                                                end={0}
                                                formattingFn={null}
                                                onComplete={undefined}
                                                onStart={undefined}
                                                prefix=""
                                                redraw={false}
                                                separator=""
                                                start={0}
                                                style={undefined}
                                                suffix=""
                                                useEasing={true}
                                />
                </styled.div>
                <styled.div
                                margin={25}
                >
                                Commits
                </styled.div>
</styled.div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.div>
                    <styled.div>
                                        <Unknown
                                                            height={50}
                                                            width={52}
                                        />
                    </styled.div>
                    <CountUp
                                        className={undefined}
                                        decimal="."
                                        decimals={0}
                                        duration={3}
                                        easingFn={null}
                                        end={0}
                                        formattingFn={null}
                                        onComplete={undefined}
                                        onStart={undefined}
                                        prefix=""
                                        redraw={false}
                                        separator=""
                                        start={0}
                                        style={undefined}
                                        suffix=""
                                        useEasing={true}
                    />
</styled.div>,
                  <styled.div
                    margin={25}
>
                    Public Repos
</styled.div>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <styled.div>
                        <Unknown
                                                height={50}
                                                width={52}
                        />
</styled.div>,
                      <CountUp
                        className={undefined}
                        decimal="."
                        decimals={0}
                        duration={3}
                        easingFn={null}
                        end={0}
                        formattingFn={null}
                        onComplete={undefined}
                        onStart={undefined}
                        prefix=""
                        redraw={false}
                        separator=""
                        start={0}
                        style={undefined}
                        suffix=""
                        useEasing={true}
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Unknown
                          height={50}
                          width={52}
/>,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "height": 50,
                          "width": 52,
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": undefined,
                        "decimal": ".",
                        "decimals": 0,
                        "duration": 3,
                        "easingFn": null,
                        "end": 0,
                        "formattingFn": null,
                        "onComplete": undefined,
                        "onStart": undefined,
                        "prefix": "",
                        "redraw": false,
                        "separator": "",
                        "start": 0,
                        "style": undefined,
                        "suffix": "",
                        "useEasing": true,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Public Repos",
                    "margin": 25,
                  },
                  "ref": null,
                  "rendered": "Public Repos",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.div>
                    <CountUp
                                        className={undefined}
                                        decimal="."
                                        decimals={0}
                                        duration={3}
                                        easingFn={null}
                                        end={0}
                                        formattingFn={null}
                                        onComplete={undefined}
                                        onStart={undefined}
                                        prefix=""
                                        redraw={false}
                                        separator=""
                                        start={0}
                                        style={undefined}
                                        suffix=""
                                        useEasing={true}
                    />
</styled.div>,
                  <styled.div
                    margin={25}
>
                    Commits
</styled.div>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <CountUp
                      className={undefined}
                      decimal="."
                      decimals={0}
                      duration={3}
                      easingFn={null}
                      end={0}
                      formattingFn={null}
                      onComplete={undefined}
                      onStart={undefined}
                      prefix=""
                      redraw={false}
                      separator=""
                      start={0}
                      style={undefined}
                      suffix=""
                      useEasing={true}
/>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": undefined,
                      "decimal": ".",
                      "decimals": 0,
                      "duration": 3,
                      "easingFn": null,
                      "end": 0,
                      "formattingFn": null,
                      "onComplete": undefined,
                      "onStart": undefined,
                      "prefix": "",
                      "redraw": false,
                      "separator": "",
                      "start": 0,
                      "style": undefined,
                      "suffix": "",
                      "useEasing": true,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Commits",
                    "margin": 25,
                  },
                  "ref": null,
                  "rendered": "Commits",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [],
          },
          "ref": null,
          "rendered": Array [],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
